--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,7 @@ HIRS_ProvisionerTPM2/scripts/tpm_aca_provision
 
 # tcg_rim_tool files
 tools/tcg_rim_tool/generated_swidTag.swidtag
+
+# flatpak-builder
+build-dir/
+.flatpak-builder/
