Pushing working aca

--- a/package/flatpak-aca/hirs/flatpak-hirs/config/aca.properties
+++ b/package/flatpak-aca/hirs/flatpak-hirs/config/aca.properties
@@ -10,7 +10,7 @@
 # ACA Directories
 #   root:           the root directory of ACA related files
 #   certificates:   the directory for ACA certificate files
-aca.directories.root              = /var/data/hirs
+aca.directories.root              = /var/tmp/hirs/aca
 aca.directories.certificates      = ${aca.directories.root}/certificates
 
 # ACA certificate related properties. These are generic properties that apply to the creation of
