Testing GH Actions Flatpak

--- a/.github/workflows/flatpak_aca.yml
+++ b/.github/workflows/flatpak_aca.yml
@@ -10,7 +10,7 @@ jobs:
       run: |
         sudo add-apt-repository ppa:flatpak/stable
         sudo apt update -y
-        sudo apt-update -y install flatpak
+        sudo apt install -y flatpak
         sudo apt install -y gnome-software-plugin-flatpak
         sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
 
