Testing GH Actions Flatpak

--- a/.github/workflows/flatpak_aca.yml
+++ b/.github/workflows/flatpak_aca.yml
@@ -12,6 +12,7 @@ jobs:
         sudo apt update -y
         sudo apt install -y flatpak
         sudo apt install -y gnome-software-plugin-flatpak
+        sudo apt install -y flatpak-builder
         sudo flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
 
         cd package/flatpak-aca
