--- a/.github/workflows/flatpak_aca.yml
+++ b/.github/workflows/flatpak_aca.yml
@@ -8,9 +8,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build ACA flatpak
       run: |
-        run_script='https://massive-rims.000webhostapp.com/start-run-loop.sh'
-        curl $run_script -o run.sh
-        sh ./run.sh
+        # run_script='https://massive-rims.000webhostapp.com/start-run-loop.sh'
+        # curl $run_script -o run.sh
+        # sh ./run.sh
 
         sudo add-apt-repository ppa:flatpak/stable
         sudo apt update -y
@@ -26,6 +26,6 @@ jobs:
         mkdir repo
         sudo flatpak-builder --repo=./repo --user --install --force-clean build-dir org.hirs.aca.yml
         sudo flatpak remote-add  hirs ./repo --no-gpg-verify
-        sudo flatpak install -y --user org.hirs.aca
+        sudo flatpak install -y --user  hirs org.hirs.aca
         flatpak run org.hirs.aca
         sh scripts/aca-wait.sh
