added aca-wait and modified flatpak install

--- a/.github/workflows/flatpak_aca.yml
+++ b/.github/workflows/flatpak_aca.yml
@@ -25,8 +25,8 @@ jobs:
         cd package/flatpak-aca
         mkdir repo
         sudo flatpak-builder --repo=./repo --user --install --force-clean build-dir org.hirs.aca.yml
-        sudo flatpak remote-add --user  hirs ./repo --no-gpg-verify
-        sudo flatpak install -y --user  hirs org.hirs.aca
+        # sudo flatpak remote-add --user  hirs ./repo --no-gpg-verify
+        # sudo flatpak install -y --user  hirs org.hirs.aca
         
         flatpak run org.hirs.aca
         sh scripts/aca-wait.sh
