Testing build-bundle

--- a/.github/workflows/flatpak_aca.yml
+++ b/.github/workflows/flatpak_aca.yml
@@ -25,8 +25,9 @@ jobs:
         cd package/flatpak-aca
         mkdir repo
         sudo flatpak-builder --repo=./repo --user --install --force-clean build-dir org.hirs.aca.yml
-        sudo flatpak remote-add --user  hirs ./repo --no-gpg-verify
-        sudo flatpak install -y --user  hirs org.hirs.aca
-        
+        # sudo flatpak remote-add --user  hirs ./repo --no-gpg-verify
+        # sudo flatpak install -y --user  hirs org.hirs.aca
+        flatpak build-bundle ./repo hirs.aca.flatpak org.hirs.aca
+        ls -a        
         # flatpak run org.hirs.aca
         # sh scripts/aca-wait.sh
