--- a/TPM_Utils/build.gradle
+++ b/TPM_Utils/build.gradle
@@ -30,7 +30,7 @@ jacocoTestReport {
         xml.enabled true
         csv.enabled true
         html.enabled true
-        html.destination "${buildDir}/reports/jacoco/html"
+        html.destination(file("${buildDir}/reports/jacoco/html"))
     }
 }
 
