Modified for gradle 5.0. Getting GC Overhead Limit test failed for YumRepositoryTest.java. If you delete that file everything passes

--- a/HIRS_AttestationCAPortal/build.gradle
+++ b/HIRS_AttestationCAPortal/build.gradle
@@ -92,3 +92,11 @@ findbugs {
     effort = 'max'
     excludeFilter = new File(findbugsConfigDir, 'suppressions.xml')
 }
+
+pmd {
+    ignoreFailures = true
+    sourceSets = [sourceSets.main]
+    reportsDir = file("$project.buildDir/reports/pmd")
+    ruleSetFiles = files("config/pmd/ruleset.xml")
+    ruleSets = []
+}
