--- a/tools/tcg_eventlog_tool/build.gradle
+++ b/tools/tcg_eventlog_tool/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
-apply plugin: 'findbugs'
+// apply plugin: 'findbugs'
+apply plugin: 'spotbugs'
 apply plugin: 'checkstyle'
 apply plugin: 'nebula.ospackage'
 
@@ -14,7 +15,8 @@ dependencies {
     compile libs.jcommander
     compile libs.commons_io
     compileOnly libs.checkstyle
-    compileOnly libs.findbugs
+    // compileOnly libs.findbugs
+    compileOnly libs.spotbugs
     testCompile libs.testng
 }
 
@@ -28,10 +30,11 @@ checkstyle {
     showViolations = true
 }
 
-ext.findbugsConfigDir = "$configDir/findbugs"
+// ext.findbugsConfigDir = "$configDir/findbugs"
+ext.spotbugsConfigDir = "$configDir/spotbugs"
 
-findbugs {
-    toolVersion = '3.0.0'
+spotbugs {
+    toolVersion = '3.1.0'
     ignoreFailures = false
     effort = 'max'
 }
