--- a/build.gradle
+++ b/build.gradle
@@ -59,12 +59,12 @@ subprojects {
         }
     }
 
-    tasks.withType(FindBugs) {
-        reports {
-            xml.enabled = false
-            html.enabled = true
-        }
-    }
+    // tasks.withType(SpotBugs) {
+    //     reports {
+    //         xml.enabled = false
+    //         html.enabled = true
+    //     }
+    // }
 
     tasks.withType(Pmd) {
         reports {
@@ -103,7 +103,7 @@ subprojects {
       commons_lang:  'org.apache.commons:commons-lang3:3.3.2',
       commons_upload:'commons-fileupload:commons-fileupload:1.3.1',
       commons_valid: 'commons-validator:commons-validator:1.4.0',
-      findbugs:      'com.google.code.findbugs:findbugs:3.0.0',
+      // findbugs:      'com.google.code.findbugs:findbugs:3.0.0',
       gson:          'com.google.code.gson:gson:2.2.4',
       guava:         'com.google.guava:guava:18.0',
       hibernate:   [ 'org.hibernate.common:hibernate-commons-annotations:4.0.4.Final',
@@ -116,6 +116,7 @@ subprojects {
                       'com.fasterxml.jackson.core:jackson-databind:2.6.3',
                       'com.fasterxml.jackson.core:jackson-annotations:2.6.3'],
       jadira_usertype: 'org.jadira.usertype:usertype.core:4.0.0.GA',
+      jcip:          'net.jcip:jcip-annotations:1.0',
       jcommander:    'com.beust:jcommander:1.72',
       joda_time:     'joda-time:joda-time:2.9.4',
       jstl:        [ 'org.apache.taglibs:taglibs-standard-impl:1.2.5',
@@ -137,6 +138,7 @@ subprojects {
       reflections:   'org.reflections:reflections:0.9.9-RC1',
       servlet_api:   'javax.servlet:servlet-api:2.5',
       slf4j:         'org.slf4j:slf4j-api:1.7.13',
+      spotbugs:      'com.github.spotbugs:spotbugs-annotations:3.1.0-RC7',
       spring_core:   ['org.springframework:spring-aop:4.3.30.RELEASE',
                       'org.springframework:spring-beans:4.3.30.RELEASE',
                       'org.springframework:spring-context:4.3.30.RELEASE',
